Fix the HTML in AdminPlugins so that it validates.  Even though putting a <div> inside an <a> works, it doesn't validate.  So instead, put the <a> inside the <div> and have the <div> set to open the value in a new window.  You lose the ability to middle-click or shift-click and open the link in a new window though :-(
git-svn-id: file:///home/jmullan/src/gallery-git/repo/trunk/gallery2@15089 57fcd75e-5312-0410-8df3-f5eb6fbb1595

--- a/modules/icons/iconpacks/paularmstrongdesigns/icons-rtl.css
+++ b/modules/icons/iconpacks/paularmstrongdesigns/icons-rtl.css
@@ -20,7 +20,7 @@ li.giSelected {
   background: url(help.gif) left center no-repeat;
 }
 
-.gbLink-Help span {
+.gbLink-Help a {
   display: none;
 }
 
